# pigon

./: .gitignore  .travis.yaml  .travis.yml  CMakeLists.txt  README.md  _config.yml  index.md  matrix.md  pigon.todo
_layouts/: default.html
include/pigon/: matrix.h
include/pigon/graphics/: math.h
src/: CMakeLists.txt  matrix.cpp  matrix.h  pigon.cpp  pigon.h  pigon.rc  pigon_global.h
test/: CMakeLists.txt  gtest_dependency.pri  main.cpp  matrix_test.h
